Fix table padding on mobile devices

--- a/src/styles/tailwind-overrides.css
+++ b/src/styles/tailwind-overrides.css
@@ -25,6 +25,26 @@
     }
   }
 
+  article.prose thead th:first-child {
+    @apply pl-2;
+  }
+
+  article.prose thead th {
+    @apply p-2;
+  }
+
+  article.prose thead th:last-child {
+    @apply pr-2;
+  }
+
+  article.prose tbody td:first-child {
+    @apply pl-2;
+  }
+
+  article.prose tbody td:last-child {
+    @apply pr-2;
+  }
+
   table {
     @apply bg-white;
     @apply rounded-md;
